# simple-curl-smtp

./: .gitignore  CMakeLists.txt  README.md  main.c  test.eml
